# JenoEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Assets/Shaders/: Basic2DHeader.hlsli  Basic2DPS.cso  Basic2DPS.hlsl  Basic2DVS.cso  Basic2DVS.hlsl
Jeno/: CMakeLists.txt  Jeno.h  PrecompiledHeader.h
Jeno/Core/: Application.cpp  Application.h  ShaderCompiler.cpp  ShaderCompiler.h  Window.cpp  Window.h
Jeno/Graphics/D3D12/: D3D12Buffer.h  D3D12Camera.cpp  D3D12Camera.h  D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandListManager.cpp  D3D12CommandListManager.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Common.h  D3D12ConstantBuffer.h  D3D12DescriptorAllocator.cpp  D3D12DescriptorAllocator.h  D3D12DescriptorHeap.cpp  D3D12DescriptorHeap.h  D3D12DescriptorHeapManager.cpp  D3D12DescriptorHeapManager.h  D3D12Device.cpp  D3D12Device.h  D3D12Helper.cpp  D3D12Helper.h  D3D12IndexBuffer.cpp  D3D12IndexBuffer.h  D3D12Material.cpp  D3D12Material.h  D3D12Mesh.cpp  D3D12Mesh.h  D3D12Pipeline.cpp  D3D12Pipeline.h  D3D12PipelineLayout.cpp  D3D12PipelineLayout.h  D3D12Renderer.cpp  D3D12Renderer.h  D3D12ShaderTypes.h  D3D12SpriteRenderer.cpp  D3D12SpriteRenderer.h  D3D12Swapchain.cpp  D3D12Swapchain.h  D3D12Texture.h  D3D12TextureManager.cpp  (+6 more)
Jeno/Utils/: JenoCommon.h
Sandbox/: CMakeLists.txt  main.cpp
